#1557: Simplified FORM_FIELD_DEFINITIONS